--- a/backoffice.html
+++ b/backoffice.html
@@ -14,6 +14,7 @@
 <body>
     <h1>Backoffice</h1><br>
 
+    <button id="goToFrontpage">Torna alla Frontpage</button>
 
     <div class="upLoadProduct">
         <h4>Aggiungi Prodotto</h4>
@@ -34,7 +35,7 @@
         <input type="text" id="productImageUrl" name="productImageUrl"><br><br>
 
         <button type="button" id="addProductButton">Aggiungi Prodotto</button>
-        
+
     </div>
 
 
