--- a/frontpage.html
+++ b/frontpage.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>FrontPage</h1>
+    <button id="goToBackoffice">Accedi al Backoffice</button>
     <div class="container d-flex flex-column-reverse" id="productContainer">
 
     </div>
@@ -21,8 +22,8 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script type="module" src="./frontpage.js"></script>
-   
-    
+
+
 </body>
 
 </html>
